--- a/apps/c/airfoil/airfoil_hdf5/sp/Makefile
+++ b/apps/c/airfoil/airfoil_hdf5/sp/Makefile
@@ -10,7 +10,7 @@ include ../../../../../makefiles/c_app.mk
 
 .PHONY: clean_convert_mesh
 
-ifdef HDF5_PAR_INSTALL_PATH
+ifeq ($(HAVE_HDF5_PAR),true)
   all: convert_mesh
 endif
 
